Utworzono za pomocą Colaboratory

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj3e0EvxoxsZrgnSOGRzTg",
+      "authorship_tag": "ABX9TyPDT5bis4htL+MQORkY7mxo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "height": 35
         },
         "id": "hpjSdwlLJ59P",
-        "outputId": "2e9efc3a-896b-4f9f-ad16-4209fe615a2c"
+        "outputId": "1d879911-b4e0-41c7-c11d-cbd45815ebff"
       },
       "outputs": [
         {
@@ -105,12 +105,12 @@
       ],
       "metadata": {
         "id": "hY356_WXOw6G",
-        "outputId": "b25e6f57-3c60-485d-c9cd-82036289a333",
+        "outputId": "474b15d6-c38d-41d4-b4d7-3a200746c5d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -131,12 +131,12 @@
       ],
       "metadata": {
         "id": "1Ez6RgeWPNx7",
-        "outputId": "22f06db3-f1e7-4348-9fe9-0d34e5acc955",
+        "outputId": "9c3e5425-dbf3-4572-cd8c-32bcbe5d643e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,12 +154,12 @@
       ],
       "metadata": {
         "id": "RVyz4bTOPULn",
-        "outputId": "69551fab-bdce-40e1-9d7e-9548850a3c81",
+        "outputId": "6d8680b6-dcc7-415f-d76f-4034f176ffc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -180,12 +180,12 @@
       ],
       "metadata": {
         "id": "LzGyXdyyPkZw",
-        "outputId": "4ad8522b-c72f-4ccb-bde4-af7e1e626a97",
+        "outputId": "c8a2fd6e-6943-4cc2-84f0-69c8469cac19",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -206,12 +206,12 @@
       ],
       "metadata": {
         "id": "rRbme3efPng1",
-        "outputId": "e735772f-c14b-49b3-e8e7-8a5edb69cd0d",
+        "outputId": "c7df9cd0-03c0-4d4a-a86c-2356b202ad82",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +221,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -232,12 +232,12 @@
       ],
       "metadata": {
         "id": "pD6AVI5WPqGf",
-        "outputId": "3246f2c7-be2a-4d9d-bfe2-cd9761153a42",
+        "outputId": "5437fd20-1995-42bc-90dc-57a0c3d4621a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +247,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -258,12 +258,12 @@
       ],
       "metadata": {
         "id": "LzSz8aQOPtb3",
-        "outputId": "7a56d374-5f97-4de5-dd4a-f62cc65421f3",
+        "outputId": "566bc028-5128-4d25-bce5-b9d6d554faf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -285,12 +285,12 @@
       ],
       "metadata": {
         "id": "ecTUjA0cQK-6",
-        "outputId": "c8261f27-2535-4b07-f342-2b64ee8afcf4",
+        "outputId": "3f06ea91-601d-42ea-daca-5a912c31b8cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,12 +308,12 @@
       ],
       "metadata": {
         "id": "3UJGZ2UDQaGG",
-        "outputId": "2d474ab8-dc85-43e6-f915-a5dbaaf21d55",
+        "outputId": "308b10e5-f872-4c98-e434-5e9f755008cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
         }
       ]
     },
@@ -344,12 +344,12 @@
       ],
       "metadata": {
         "id": "ElEDh97pQmFl",
-        "outputId": "4b121227-4855-447b-8369-33216c662439",
+        "outputId": "8998796e-70e2-48e6-878b-0627bbb01c21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 13
         }
       ]
     },
@@ -371,12 +371,12 @@
       ],
       "metadata": {
         "id": "dVeJfjdbQy9N",
-        "outputId": "bd61db82-e67d-4721-a147-cc87fb718f2b",
+        "outputId": "f79c2cd7-1ed8-425b-f9df-4394cc5e0fd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
@@ -397,12 +397,12 @@
       ],
       "metadata": {
         "id": "X97lXOtYQ0ks",
-        "outputId": "71c8682c-33f4-4ce1-b0ae-904b06aed88b",
+        "outputId": "55b91e51-b267-42e3-8a2d-f6e016e368e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 15
         }
       ]
     },
@@ -424,12 +424,12 @@
       ],
       "metadata": {
         "id": "LXRtxeBLRI_n",
-        "outputId": "ecb0e572-5f37-4fba-df99-d932a44927a8",
+        "outputId": "116f546e-3148-483c-cea0-4af51898a0c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,12 +448,12 @@
       ],
       "metadata": {
         "id": "MtcPZn96RVCQ",
-        "outputId": "1794f006-fc1e-4f36-d274-02b0f9ab3453",
+        "outputId": "01b7386e-961a-442a-a2a0-7064631bf559",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 17
         }
       ]
     },
@@ -484,13 +484,360 @@
         "      [3, 1, 2]],\n",
         "\n",
         "     [[4, 1, 3],\n",
-        "      [4, 2, 1]]]\n",
-        ")"
+        "      [4, 2, 1]],\n",
+        "\n",
+        "     [[3, 2, 1],\n",
+        "      [4, 3, 2]]\n",
+        "     ]\n",
+        ")\n",
+        "x"
       ],
       "metadata": {
-        "id": "DxfO6D7WRbSO"
+        "id": "DxfO6D7WRbSO",
+        "outputId": "5ea50bd9-cf86-4cc7-fa85-bf1dc1b6ce14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[4, 3, 1],\n",
+              "        [3, 1, 2]],\n",
+              "\n",
+              "       [[4, 1, 3],\n",
+              "        [4, 2, 1]],\n",
+              "\n",
+              "       [[3, 2, 1],\n",
+              "        [4, 3, 2]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.ndim"
+      ],
+      "metadata": {
+        "id": "8Xb--feejp4C",
+        "outputId": "b9e8d7d0-3de4-45ab-ef0f-f501b992c9ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "FpZ-JCv5kUw2",
+        "outputId": "ea395501-00df-4d0f-8a6a-94a9339d83dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Typy danych"
+      ],
+      "metadata": {
+        "id": "Xud_IWJkksKO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([1, 2, 3])\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "XGgvGFW7ku62",
+        "outputId": "ba59250b-5925-4ee6-981c-8d396bc6a56d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([1.0, 2.3, 3.3])\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "fmACZtfllSD2",
+        "outputId": "522059a3-916c-450f-e9ab-9a8b5b2b6bf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([1, 2, 3], dtype='float')\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "LEAFJWcmlXgc",
+        "outputId": "0a568ef3-ddc4-4036-e09c-6b8028f5ceec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([1, 2, 3], dtype='complex')\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "I9bD0CZvlfIV",
+        "outputId": "4ac19106-0892-4827-cd13-0f18285163df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('complex128')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A"
+      ],
+      "metadata": {
+        "id": "qC5jrYzElkPn",
+        "outputId": "4ae56b0a-c5f7-44d6-f2f9-cf6c05070f81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.+0.j, 2.+0.j, 3.+0.j])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([1.0, 2.3, 3.3], dtype='int')\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "3OygRPxjlnER",
+        "outputId": "920ee129-6178-4a83-a1d3-47f3543df471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A"
+      ],
+      "metadata": {
+        "id": "GJUq9G6fluBv",
+        "outputId": "6e2be11e-45f5-4012-d913-89fd4e122e4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([True, False])\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "imI-ljdhlytW",
+        "outputId": "db325d05-9d1a-4eec-a3f3-814c38946205",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('bool')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([24, 120, 230], dtype=np.uint8)\n",
+        "A.dtype"
+      ],
+      "metadata": {
+        "id": "s3hsx395l4wZ",
+        "outputId": "c5ae897f-5fd4-4e35-fe37-72d6983c94f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('uint8')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Tworzenie tablic"
+      ],
+      "metadata": {
+        "id": "ZgpEhXfUmRxN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "M1MvsGz1mVlm"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
