Utworzono za pomocą Colaboratory

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDT5bis4htL+MQORkY7mxo",
+      "authorship_tag": "ABX9TyNmQTCoOIGBDhhEgjppDSH7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -494,10 +494,10 @@
       ],
       "metadata": {
         "id": "DxfO6D7WRbSO",
-        "outputId": "5ea50bd9-cf86-4cc7-fa85-bf1dc1b6ce14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5ea50bd9-cf86-4cc7-fa85-bf1dc1b6ce14"
       },
       "execution_count": 24,
       "outputs": [
@@ -526,11 +526,11 @@
         "x.ndim"
       ],
       "metadata": {
-        "id": "8Xb--feejp4C",
-        "outputId": "b9e8d7d0-3de4-45ab-ef0f-f501b992c9ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8Xb--feejp4C",
+        "outputId": "b9e8d7d0-3de4-45ab-ef0f-f501b992c9ed"
       },
       "execution_count": 25,
       "outputs": [
@@ -552,11 +552,11 @@
         "x.shape"
       ],
       "metadata": {
-        "id": "FpZ-JCv5kUw2",
-        "outputId": "ea395501-00df-4d0f-8a6a-94a9339d83dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FpZ-JCv5kUw2",
+        "outputId": "ea395501-00df-4d0f-8a6a-94a9339d83dc"
       },
       "execution_count": 26,
       "outputs": [
@@ -588,11 +588,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "XGgvGFW7ku62",
-        "outputId": "ba59250b-5925-4ee6-981c-8d396bc6a56d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XGgvGFW7ku62",
+        "outputId": "ba59250b-5925-4ee6-981c-8d396bc6a56d"
       },
       "execution_count": 27,
       "outputs": [
@@ -615,11 +615,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "fmACZtfllSD2",
-        "outputId": "522059a3-916c-450f-e9ab-9a8b5b2b6bf9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fmACZtfllSD2",
+        "outputId": "522059a3-916c-450f-e9ab-9a8b5b2b6bf9"
       },
       "execution_count": 28,
       "outputs": [
@@ -642,11 +642,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "LEAFJWcmlXgc",
-        "outputId": "0a568ef3-ddc4-4036-e09c-6b8028f5ceec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LEAFJWcmlXgc",
+        "outputId": "0a568ef3-ddc4-4036-e09c-6b8028f5ceec"
       },
       "execution_count": 29,
       "outputs": [
@@ -669,11 +669,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "I9bD0CZvlfIV",
-        "outputId": "4ac19106-0892-4827-cd13-0f18285163df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I9bD0CZvlfIV",
+        "outputId": "4ac19106-0892-4827-cd13-0f18285163df"
       },
       "execution_count": 30,
       "outputs": [
@@ -695,11 +695,11 @@
         "A"
       ],
       "metadata": {
-        "id": "qC5jrYzElkPn",
-        "outputId": "4ae56b0a-c5f7-44d6-f2f9-cf6c05070f81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qC5jrYzElkPn",
+        "outputId": "4ae56b0a-c5f7-44d6-f2f9-cf6c05070f81"
       },
       "execution_count": 31,
       "outputs": [
@@ -722,11 +722,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "3OygRPxjlnER",
-        "outputId": "920ee129-6178-4a83-a1d3-47f3543df471",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3OygRPxjlnER",
+        "outputId": "920ee129-6178-4a83-a1d3-47f3543df471"
       },
       "execution_count": 32,
       "outputs": [
@@ -748,11 +748,11 @@
         "A"
       ],
       "metadata": {
-        "id": "GJUq9G6fluBv",
-        "outputId": "6e2be11e-45f5-4012-d913-89fd4e122e4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GJUq9G6fluBv",
+        "outputId": "6e2be11e-45f5-4012-d913-89fd4e122e4a"
       },
       "execution_count": 33,
       "outputs": [
@@ -775,11 +775,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "imI-ljdhlytW",
-        "outputId": "db325d05-9d1a-4eec-a3f3-814c38946205",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "imI-ljdhlytW",
+        "outputId": "db325d05-9d1a-4eec-a3f3-814c38946205"
       },
       "execution_count": 34,
       "outputs": [
@@ -802,11 +802,11 @@
         "A.dtype"
       ],
       "metadata": {
-        "id": "s3hsx395l4wZ",
-        "outputId": "c5ae897f-5fd4-4e35-fe37-72d6983c94f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s3hsx395l4wZ",
+        "outputId": "c5ae897f-5fd4-4e35-fe37-72d6983c94f7"
       },
       "execution_count": 37,
       "outputs": [
@@ -833,12 +833,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "np.zeros(shape=(4, 10))"
+      ],
       "metadata": {
-        "id": "M1MvsGz1mVlm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M1MvsGz1mVlm",
+        "outputId": "15467f4b-1be8-43d9-959b-307d5adcc156"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     }
   ]
 }
