--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmQTCoOIGBDhhEgjppDSH7",
+      "authorship_tag": "ABX9TyNC5jv7Ggrmence4ULxk/HT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -834,31 +834,433 @@
     {
       "cell_type": "code",
       "source": [
-        "np.zeros(shape=(4, 10))"
+        "np.zeros(shape=(4, 10), dtype ='int')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M1MvsGz1mVlm",
-        "outputId": "15467f4b-1be8-43d9-959b-307d5adcc156"
+        "outputId": "691ac539-931b-4169-c300-dcfcd8b52c52"
       },
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+              "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ones(shape=(5, 5))"
+      ],
+      "metadata": {
+        "id": "sjucrwv1nXRQ",
+        "outputId": "b3a37b26-1a5f-47f8-faf4-4f457dcb2c3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ones(shape=(5, 5), dtype='int')"
+      ],
+      "metadata": {
+        "id": "r8yZpxh9niiT",
+        "outputId": "23590513-3d2c-4d62-dea6-18daa37707b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.full(shape=(3, 3), fill_value=4, dtype='int')"
+      ],
+      "metadata": {
+        "id": "VZauWnDXnnOk",
+        "outputId": "3da51247-92f3-452f-d32c-3aa1ff0b55c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 4, 4],\n",
+              "       [4, 4, 4],\n",
+              "       [4, 4, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(10)"
+      ],
+      "metadata": {
+        "id": "MI3rg6ornxal",
+        "outputId": "294b4f1c-c06d-46f6-9911-0c14ebe3395c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(10))"
+      ],
+      "metadata": {
+        "id": "0aR2x-jan3G6",
+        "outputId": "367b26c9-6fce-4c80-e2af-7259a67b9ce0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(start=5, stop=10)"
+      ],
+      "metadata": {
+        "id": "J2JK2ViOn8ol",
+        "outputId": "8f5ebf5f-4e27-407f-817b-ef9f97709878",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(start=10, stop=100, step=10)"
+      ],
+      "metadata": {
+        "id": "eR5txVSfoFbH",
+        "outputId": "5f46899a-8d85-45ab-bdd6-7abb9b6f7d83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 20, 30, 40, 50, 60, 70, 80, 90])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(start=100, stop=10, step=-10)"
+      ],
+      "metadata": {
+        "id": "NLXNoE26oNQK",
+        "outputId": "0fe4a5f6-3cad-4fa7-94a4-3c7ab5e07af8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([100,  90,  80,  70,  60,  50,  40,  30,  20])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.arange(start=0, stop=1, step=0.05)"
+      ],
+      "metadata": {
+        "id": "V1WrO-aSoQ0X",
+        "outputId": "18fd43dc-c489-4770-8958-8bb8704eb51f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.  , 0.05, 0.1 , 0.15, 0.2 , 0.25, 0.3 , 0.35, 0.4 , 0.45, 0.5 ,\n",
+              "       0.55, 0.6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.linspace(start=0, stop=1, num=11)"
+      ],
+      "metadata": {
+        "id": "06XL4kwooYcq",
+        "outputId": "77269fc4-ee91-4cf7-90e4-cb5c61532ad3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.arange(15)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "ABXvuE3womY4",
+        "outputId": "6f2d8cb4-3f27-4df0-900f-2af3059efa2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.reshape((3,5))"
+      ],
+      "metadata": {
+        "id": "CxwkKSHBouH5",
+        "outputId": "69f4b43d-e9b2-483a-b74a-8d0cf5bf9ce5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.reshape((3,-1))"
+      ],
+      "metadata": {
+        "id": "eY9A9bEao2S9",
+        "outputId": "f2ceaa62-6398-4e7f-fbd6-382c3ff1dc30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3,  4],\n",
+              "       [ 5,  6,  7,  8,  9],\n",
+              "       [10, 11, 12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.reshape((-1,3))"
+      ],
+      "metadata": {
+        "id": "WGAfqq08o_Ok",
+        "outputId": "4a7da89d-fe8f-4296-c12d-a1afffc4a3ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2],\n",
+              "       [ 3,  4,  5],\n",
+              "       [ 6,  7,  8],\n",
+              "       [ 9, 10, 11],\n",
+              "       [12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Podstawowe operacje na tablicach"
+      ],
+      "metadata": {
+        "id": "kqElY5WlpHmj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "34g5y6_opLiG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
