--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC5jv7Ggrmence4ULxk/HT",
+      "authorship_tag": "ABX9TyOeSlIstLZKG/D+10vDIc3u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -866,11 +866,11 @@
         "np.ones(shape=(5, 5))"
       ],
       "metadata": {
-        "id": "sjucrwv1nXRQ",
-        "outputId": "b3a37b26-1a5f-47f8-faf4-4f457dcb2c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sjucrwv1nXRQ",
+        "outputId": "b3a37b26-1a5f-47f8-faf4-4f457dcb2c3a"
       },
       "execution_count": 40,
       "outputs": [
@@ -896,11 +896,11 @@
         "np.ones(shape=(5, 5), dtype='int')"
       ],
       "metadata": {
-        "id": "r8yZpxh9niiT",
-        "outputId": "23590513-3d2c-4d62-dea6-18daa37707b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r8yZpxh9niiT",
+        "outputId": "23590513-3d2c-4d62-dea6-18daa37707b1"
       },
       "execution_count": 41,
       "outputs": [
@@ -926,11 +926,11 @@
         "np.full(shape=(3, 3), fill_value=4, dtype='int')"
       ],
       "metadata": {
-        "id": "VZauWnDXnnOk",
-        "outputId": "3da51247-92f3-452f-d32c-3aa1ff0b55c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VZauWnDXnnOk",
+        "outputId": "3da51247-92f3-452f-d32c-3aa1ff0b55c9"
       },
       "execution_count": 42,
       "outputs": [
@@ -954,11 +954,11 @@
         "np.arange(10)"
       ],
       "metadata": {
-        "id": "MI3rg6ornxal",
-        "outputId": "294b4f1c-c06d-46f6-9911-0c14ebe3395c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MI3rg6ornxal",
+        "outputId": "294b4f1c-c06d-46f6-9911-0c14ebe3395c"
       },
       "execution_count": 43,
       "outputs": [
@@ -980,11 +980,11 @@
         "list(range(10))"
       ],
       "metadata": {
-        "id": "0aR2x-jan3G6",
-        "outputId": "367b26c9-6fce-4c80-e2af-7259a67b9ce0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0aR2x-jan3G6",
+        "outputId": "367b26c9-6fce-4c80-e2af-7259a67b9ce0"
       },
       "execution_count": 44,
       "outputs": [
@@ -1006,11 +1006,11 @@
         "np.arange(start=5, stop=10)"
       ],
       "metadata": {
-        "id": "J2JK2ViOn8ol",
-        "outputId": "8f5ebf5f-4e27-407f-817b-ef9f97709878",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J2JK2ViOn8ol",
+        "outputId": "8f5ebf5f-4e27-407f-817b-ef9f97709878"
       },
       "execution_count": 45,
       "outputs": [
@@ -1032,11 +1032,11 @@
         "np.arange(start=10, stop=100, step=10)"
       ],
       "metadata": {
-        "id": "eR5txVSfoFbH",
-        "outputId": "5f46899a-8d85-45ab-bdd6-7abb9b6f7d83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eR5txVSfoFbH",
+        "outputId": "5f46899a-8d85-45ab-bdd6-7abb9b6f7d83"
       },
       "execution_count": 47,
       "outputs": [
@@ -1058,11 +1058,11 @@
         "np.arange(start=100, stop=10, step=-10)"
       ],
       "metadata": {
-        "id": "NLXNoE26oNQK",
-        "outputId": "0fe4a5f6-3cad-4fa7-94a4-3c7ab5e07af8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NLXNoE26oNQK",
+        "outputId": "0fe4a5f6-3cad-4fa7-94a4-3c7ab5e07af8"
       },
       "execution_count": 48,
       "outputs": [
@@ -1084,11 +1084,11 @@
         "np.arange(start=0, stop=1, step=0.05)"
       ],
       "metadata": {
-        "id": "V1WrO-aSoQ0X",
-        "outputId": "18fd43dc-c489-4770-8958-8bb8704eb51f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V1WrO-aSoQ0X",
+        "outputId": "18fd43dc-c489-4770-8958-8bb8704eb51f"
       },
       "execution_count": 49,
       "outputs": [
@@ -1111,11 +1111,11 @@
         "np.linspace(start=0, stop=1, num=11)"
       ],
       "metadata": {
-        "id": "06XL4kwooYcq",
-        "outputId": "77269fc4-ee91-4cf7-90e4-cb5c61532ad3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "06XL4kwooYcq",
+        "outputId": "77269fc4-ee91-4cf7-90e4-cb5c61532ad3"
       },
       "execution_count": 51,
       "outputs": [
@@ -1138,11 +1138,11 @@
         "A"
       ],
       "metadata": {
-        "id": "ABXvuE3womY4",
-        "outputId": "6f2d8cb4-3f27-4df0-900f-2af3059efa2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ABXvuE3womY4",
+        "outputId": "6f2d8cb4-3f27-4df0-900f-2af3059efa2c"
       },
       "execution_count": 53,
       "outputs": [
@@ -1164,11 +1164,11 @@
         "A.reshape((3,5))"
       ],
       "metadata": {
-        "id": "CxwkKSHBouH5",
-        "outputId": "69f4b43d-e9b2-483a-b74a-8d0cf5bf9ce5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CxwkKSHBouH5",
+        "outputId": "69f4b43d-e9b2-483a-b74a-8d0cf5bf9ce5"
       },
       "execution_count": 54,
       "outputs": [
@@ -1192,11 +1192,11 @@
         "A.reshape((3,-1))"
       ],
       "metadata": {
-        "id": "eY9A9bEao2S9",
-        "outputId": "f2ceaa62-6398-4e7f-fbd6-382c3ff1dc30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eY9A9bEao2S9",
+        "outputId": "f2ceaa62-6398-4e7f-fbd6-382c3ff1dc30"
       },
       "execution_count": 55,
       "outputs": [
@@ -1220,11 +1220,11 @@
         "A.reshape((-1,3))"
       ],
       "metadata": {
-        "id": "WGAfqq08o_Ok",
-        "outputId": "4a7da89d-fe8f-4296-c12d-a1afffc4a3ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WGAfqq08o_Ok",
+        "outputId": "4a7da89d-fe8f-4296-c12d-a1afffc4a3ad"
       },
       "execution_count": 56,
       "outputs": [
@@ -1255,12 +1255,481 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "A = np.array([3, 1, 4, 2])\n",
+        "B = np.array([3, -1, 3, 2])\n",
+        "print(A)\n",
+        "print(B)"
+      ],
       "metadata": {
-        "id": "34g5y6_opLiG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "34g5y6_opLiG",
+        "outputId": "7c677b67-9452-4ec4-ab1a-4260ba878d3f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3 1 4 2]\n",
+            "[ 3 -1  3  2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A + B"
+      ],
+      "metadata": {
+        "id": "GGsWYJfYpfHc",
+        "outputId": "714c9f03-638b-4fc7-915f-0969ab6482a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 0, 7, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A - B"
+      ],
+      "metadata": {
+        "id": "zjUzeU5rpiYH",
+        "outputId": "81780f64-d859-4e92-cbd9-20b563cb49a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 2, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A * B"
+      ],
+      "metadata": {
+        "id": "1KZUMTGVpnII",
+        "outputId": "8e41d196-153c-4434-ad5c-82a4967588db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 9, -1, 12,  4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A / B"
+      ],
+      "metadata": {
+        "id": "1X5whqh4ppzk",
+        "outputId": "c0b4af73-a554-4bb9-cd85-8016834cb64d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.        , -1.        ,  1.33333333,  1.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.add(A, B)"
+      ],
+      "metadata": {
+        "id": "aoeVourKqG36",
+        "outputId": "321b6ed7-fe4b-4b0a-af69-a7f5b7cd25da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 0, 7, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.subtract(A, B)"
+      ],
+      "metadata": {
+        "id": "C4gdaxTdqLGo",
+        "outputId": "1edfb9ac-bfa7-4b76-c2b7-272a66dfbcb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 2, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.multiply(A, B)"
+      ],
+      "metadata": {
+        "id": "oso2Jc6AqNhR",
+        "outputId": "d175ba9f-b32a-43c8-92a0-7917b9c65da9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 9, -1, 12,  4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.divide(A, B)"
+      ],
+      "metadata": {
+        "id": "N9dvQZTAqQSu",
+        "outputId": "44944c89-fe4c-4d6f-882a-84c1ea841e36",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.        , -1.        ,  1.33333333,  1.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A + 3"
+      ],
+      "metadata": {
+        "id": "gWV6_U5jpxh-",
+        "outputId": "2e6f5bbb-8fe5-4f60-da4a-c7afaf97966e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 4, 7, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2 * A"
+      ],
+      "metadata": {
+        "id": "1FVu6qRMp322",
+        "outputId": "3e936949-06c9-4d10-844b-0610cf3d2c9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 2, 8, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A + 3 * B"
+      ],
+      "metadata": {
+        "id": "rBzNRSgFp7d5",
+        "outputId": "691c3d28-172b-407b-bea7-80b0dc032fae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12, -2, 13,  8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.array([[1, 3], [-2, 0]])\n",
+        "Y = np.array([[6, 0], [-1, 2]])\n",
+        "print(X, '\\n')\n",
+        "print(Y)"
+      ],
+      "metadata": {
+        "id": "jAiO5zz_p_zc",
+        "outputId": "226e541e-f28e-4b4c-caa2-9943bc7dcc41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  3]\n",
+            " [-2  0]] \n",
+            "\n",
+            "[[ 6  0]\n",
+            " [-1  2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X * Y"
+      ],
+      "metadata": {
+        "id": "q18c7oIGsMIZ",
+        "outputId": "32c24be6-efa0-42e2-bc89-f4763e23e844",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6, 0],\n",
+              "       [2, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.dot(X, Y)"
+      ],
+      "metadata": {
+        "id": "lvUtGl8Mslbl",
+        "outputId": "751c8223-bb66-4b36-a94b-8201f9276f7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  3,   6],\n",
+              "       [-12,   0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.dot(Y)"
+      ],
+      "metadata": {
+        "id": "-Xk_5BI6s-98",
+        "outputId": "d9b36a76-5dbc-4b60-816d-9008ccfdf8bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  3,   6],\n",
+              "       [-12,   0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y.dot(X)"
+      ],
+      "metadata": {
+        "id": "asj8WIXntCWU",
+        "outputId": "a79f5005-4b0d-48be-d95f-f98da3eaeb6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 6, 18],\n",
+              "       [-5, -3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X @ Y"
+      ],
+      "metadata": {
+        "id": "FCjlsZtytFTp",
+        "outputId": "f34d5f39-819a-40bf-cc49-a0325351761e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  3,   6],\n",
+              "       [-12,   0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
     }
   ]
 }
