Utworzono za pomocą Colaboratory

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOTkvfmw+SuFP8uXe7Vmjy",
+      "authorship_tag": "ABX9TyNfb1j+8o7SeAWz8QSTTQTj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1757,11 +1757,11 @@
         "np.random.randn()"
       ],
       "metadata": {
-        "id": "EKgoNnTVdXxy",
-        "outputId": "113ae119-f4bf-4caa-96c5-38ba76586098",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EKgoNnTVdXxy",
+        "outputId": "113ae119-f4bf-4caa-96c5-38ba76586098"
       },
       "execution_count": 70,
       "outputs": [
@@ -1783,11 +1783,11 @@
         "np.random.randn(10)"
       ],
       "metadata": {
-        "id": "KFhAIJbxdrYx",
-        "outputId": "da57ad91-8b73-4165-e108-def622feee79",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KFhAIJbxdrYx",
+        "outputId": "da57ad91-8b73-4165-e108-def622feee79"
       },
       "execution_count": 71,
       "outputs": [
@@ -1810,11 +1810,11 @@
         "np.random.randn(10, 4)"
       ],
       "metadata": {
-        "id": "NP5m03EudvPd",
-        "outputId": "286a0ea7-6193-4204-f0f2-350aff5a92d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NP5m03EudvPd",
+        "outputId": "286a0ea7-6193-4204-f0f2-350aff5a92d0"
       },
       "execution_count": 72,
       "outputs": [
@@ -1845,11 +1845,11 @@
         "np.random.rand()"
       ],
       "metadata": {
-        "id": "g6tygYVUd5in",
-        "outputId": "e55814fe-361e-4bf7-c358-f59265434719",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g6tygYVUd5in",
+        "outputId": "e55814fe-361e-4bf7-c358-f59265434719"
       },
       "execution_count": 73,
       "outputs": [
@@ -1871,11 +1871,11 @@
         "np.random.rand(10)"
       ],
       "metadata": {
-        "id": "28lt_91BeYyx",
-        "outputId": "0aedf3e6-52b8-44c3-be87-a337e8ae60b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "28lt_91BeYyx",
+        "outputId": "0aedf3e6-52b8-44c3-be87-a337e8ae60b8"
       },
       "execution_count": 74,
       "outputs": [
@@ -1898,11 +1898,11 @@
         "np.random.rand(10, 2)"
       ],
       "metadata": {
-        "id": "YJ50i_d4earo",
-        "outputId": "e3f53ad0-652c-489e-acef-981f0e4efd30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YJ50i_d4earo",
+        "outputId": "e3f53ad0-652c-489e-acef-981f0e4efd30"
       },
       "execution_count": 75,
       "outputs": [
@@ -1933,11 +1933,11 @@
         "np.random.randint(10)"
       ],
       "metadata": {
-        "id": "GSCjSSqYedXE",
-        "outputId": "f237619f-be67-491d-e89d-b5976e4e3a6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GSCjSSqYedXE",
+        "outputId": "f237619f-be67-491d-e89d-b5976e4e3a6e"
       },
       "execution_count": 76,
       "outputs": [
@@ -1959,11 +1959,11 @@
         "np.random.randint(low=10, high=101)"
       ],
       "metadata": {
-        "id": "BeeJ9a0Ieobg",
-        "outputId": "b867e301-13dd-468b-9be8-ac0954618e7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BeeJ9a0Ieobg",
+        "outputId": "b867e301-13dd-468b-9be8-ac0954618e7b"
       },
       "execution_count": 78,
       "outputs": [
@@ -1985,11 +1985,11 @@
         "np.random.randint(low=10, high=101, size=10)"
       ],
       "metadata": {
-        "id": "FIj_1IGhezXu",
-        "outputId": "4c48f4a1-6a1a-487a-c945-a834adc7a486",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FIj_1IGhezXu",
+        "outputId": "4c48f4a1-6a1a-487a-c945-a834adc7a486"
       },
       "execution_count": 79,
       "outputs": [
@@ -2011,11 +2011,11 @@
         "np.random.choice([4, 2, 1, 3, 5])"
       ],
       "metadata": {
-        "id": "M41m_qPOe2Ci",
-        "outputId": "192d6c28-82e8-4248-b161-a824743b892b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M41m_qPOe2Ci",
+        "outputId": "192d6c28-82e8-4248-b161-a824743b892b"
       },
       "execution_count": 81,
       "outputs": [
@@ -2037,12 +2037,12 @@
         "np.random.choice(['python', 'java', 'sql'])"
       ],
       "metadata": {
-        "id": "Q0pughp5e_6w",
-        "outputId": "5244de56-7325-4587-964d-6841dc664ef5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "Q0pughp5e_6w",
+        "outputId": "5244de56-7325-4587-964d-6841dc664ef5"
       },
       "execution_count": 82,
       "outputs": [
@@ -2068,11 +2068,11 @@
         "data"
       ],
       "metadata": {
-        "id": "Uewsa0FsfHfq",
-        "outputId": "d196c698-7257-44d2-8953-d435dc601760",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uewsa0FsfHfq",
+        "outputId": "d196c698-7257-44d2-8953-d435dc601760"
       },
       "execution_count": 84,
       "outputs": [
@@ -2105,11 +2105,11 @@
         "data"
       ],
       "metadata": {
-        "id": "P2Zyqpf6fWbA",
-        "outputId": "a1fce586-c832-479c-cf04-76e8b6b651c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P2Zyqpf6fWbA",
+        "outputId": "a1fce586-c832-479c-cf04-76e8b6b651c1"
       },
       "execution_count": 86,
       "outputs": [
@@ -2136,9 +2136,383 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "np.exp(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m-_RzYeSfn8h",
+        "outputId": "59805005-84c5-4911-b060-f5f1c108454c"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.718281828459045"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sqrt(9)"
+      ],
+      "metadata": {
+        "id": "n2T2HQSBpTGv",
+        "outputId": "91cc99d9-41ea-4472-b62f-244b5a48a87b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.all([2, 3, 1])"
+      ],
+      "metadata": {
+        "id": "os3YFShvpWsS",
+        "outputId": "ee0c3120-36ea-4dcb-bea7-6059d372a914",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.any([0, 0, 0])"
+      ],
+      "metadata": {
+        "id": "T96h0mRcpeF1",
+        "outputId": "cdf1ffd4-d5bb-4efd-f1b2-fa4161eada22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(1.3)"
+      ],
+      "metadata": {
+        "id": "OXGVKkb0pt9v",
+        "outputId": "4301a523-8677-412d-d72f-0044c767a782",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.random.rand(5)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "nfXRLnokp4oF",
+        "outputId": "c1ca8ab1-3655-41b7-9dbc-128fd0c479a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.58127287, 0.88173536, 0.69253159, 0.72525428, 0.50132438])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[np.argmax(A)]"
+      ],
+      "metadata": {
+        "id": "6oimaccdqDqY",
+        "outputId": "c3d7e113-4def-487c-b9e2-e52518ede731",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8817353618548528"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A[np.argmin(A)]"
+      ],
+      "metadata": {
+        "id": "PhuXZ8KQqT4F",
+        "outputId": "89fdfce4-b2de-44f6-c1a5-e66f225ef8ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5013243819267023"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.argsort(A)"
+      ],
+      "metadata": {
+        "id": "hSDbNSCsqhSt",
+        "outputId": "00563ca0-d0eb-4137-e9d7-204920c367ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 0, 2, 3, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.max(A)"
+      ],
+      "metadata": {
+        "id": "4aKzeNoBqvC7",
+        "outputId": "4237e80a-baf5-4e90-dec4-9164d58f7958",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8817353618548528"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.min(A)"
+      ],
+      "metadata": {
+        "id": "X7S0Ts5rqygL",
+        "outputId": "08fdda33-938b-4d60-f281-fb95286447ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5013243819267023"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(A)"
+      ],
+      "metadata": {
+        "id": "xdWk8wm6q0M9",
+        "outputId": "db1ecc6b-db4c-4320-ba1d-f7746c48a69d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.676423697262964"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.median(A)"
+      ],
+      "metadata": {
+        "id": "PwkgFWZzq19D",
+        "outputId": "52569146-d4a4-4312-8fa8-8f8c20396516",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6925315900777659"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.std(A)"
+      ],
+      "metadata": {
+        "id": "sAeCrqa-q4BS",
+        "outputId": "6389fa8b-87e3-4e1a-ed6d-ad41f89b12dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.13000786074672221"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Indeksowanie, Wycinanie"
+      ],
+      "metadata": {
+        "id": "WSBh74Szq_bX"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "m-_RzYeSfn8h"
+        "id": "fnNp-u8yrEdC"
       },
       "execution_count": null,
       "outputs": []
